--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ permalink: /
 
   <div class="about-text">
     <h3>Hey, I'm Kevin Reedy!</h3>
-    <p>Greetings Internet! I'm a infrastructure developer from Chicago. I currently work for <a href="https://www.chef.io/">Chef</a> as a Customer Engineer, where I help other companies be successful with their DevOps Journey and Chef's products. Since graduating from <a href="http://www.cdm.depaul.edu/Pages/default.aspx">DePaul</a>, I've worked for <a href="https://www.bellycard.com">Belly</a>, <a href="http://www.riverbed.com/">Riverbed</a>, <a href="https://www.opendns.com">OpenDNS</a>, and others.</p>
+    <p>Greetings Internet! I'm an infrastructure developer from Chicago. I currently work for <a href="https://www.chef.io/">Chef</a> as a Customer Engineer, where I help other companies be successful with their DevOps Journey and Chef's products. Since graduating from <a href="http://www.cdm.depaul.edu/Pages/default.aspx">DePaul</a>, I've worked for <a href="https://www.bellycard.com">Belly</a>, <a href="http://www.riverbed.com/">Riverbed</a>, <a href="https://www.opendns.com">OpenDNS</a>, and others.</p>
 
     <p>I am super passionate about automation. My first experience was configuring networking equipment using serial consoles and Perl; thankfully, the tooling has gotten much better since then. Some of my latest projects include orchestrating service deployment with <a href="https://www.docker.com/">Docker</a> and infrastructure automation with <a href="https://www.chef.io/">Chef</a>, but I love exploring new technology to find the right tool for the job.</p>
 
