--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@ permalink: /blog/
 
         <div class="post-content-truncate">
           {% if post.content contains "<!-- more -->" %}
-            {{ post.content | split:"<!-- more -->" | first % }}
+            {{ post.content | split:"<!-- more -->" | first }}
           {% else %}
             {{ post.content | strip_html | truncatewords:100 }}
           {% endif %}
