--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@ permalink: /
 
   <div class="about-text">
     <h3>Hey, I'm Kevin Reedy!</h3>
-    <p>Greetings Internet! I'm an infrastructure developer from Chicago. I currently work for <a href="https://www.chef.io/">Chef</a> as a Customer Architect, where I help other companies be successful with their DevOps Journey and Chef's products. Since graduating from <a href="http://www.cdm.depaul.edu/Pages/default.aspx">DePaul</a>, I've worked for <a href="https://www.bellycard.com">Belly</a>, <a href="http://www.riverbed.com/">Riverbed</a>, <a href="https://www.opendns.com">OpenDNS</a>, and others.</p>
+    <p>Greetings Internet! I'm an infrastructure developer from Chicago. I currently work for <a href="https://konghq.com/">Kong</a> (not the dog toy company) as a Technical Account Manager, where I help other companies be successful with their API and Service Connectivity needs. Since graduating from <a href="http://www.cdm.depaul.edu/Pages/default.aspx">DePaul</a>, I've worked for <a href="https://www.chef.io/">Chef,</a>, <a href="https://www.bellycard.com">Belly</a>, <a href="https://www.opendns.com">OpenDNS</a>, and others.</p>
 
     <p>I am super passionate about automation. My first experience was configuring networking equipment using serial consoles and Perl; thankfully, the tooling has gotten much better since then.</p>
 
-    <p>In my free time, I enjoy brewing beer, snowboarding, playing shuffleboard, and promising myself that I'll update my blog more often. You can also find me on <a href="https://github.com/kevinreedy">Github</a> and <a href="https://twitter.com/kevinreedy">Twitter</a>.</p>
+    <p>In my free time, I enjoy playing shuffleboard, snowboarding, brewing beer and promising myself that I'll update my blog more often. You can also find me on <a href="https://github.com/kevinreedy">Github</a> and <a href="https://twitter.com/kevinreedy">Twitter</a>.</p>
   </div>
 </div>
