--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ permalink: /
 
   <div class="about-text">
     <h3>Hey, I'm Kevin Reedy!</h3>
-    <p>Greetings Internet! I'm an infrastructure developer from Chicago. I currently work for <a href="https://konghq.com/">Kong</a> (not the dog toy company) as a Technical Account Manager, where I help other companies be successful with their API and Service Connectivity needs. Since graduating from <a href="http://www.cdm.depaul.edu/Pages/default.aspx">DePaul</a>, I've worked for <a href="https://www.chef.io/">Chef,</a>, <a href="https://www.bellycard.com">Belly</a>, <a href="https://www.opendns.com">OpenDNS</a>, and others.</p>
+    <p>Greetings Internet! I'm an infrastructure developer from Chicago. I currently work for <a href="https://konghq.com/">Kong</a> (not the dog toy company) as a Technical Account Manager, where I help other companies be successful with their API and Service Connectivity needs. Since graduating from <a href="http://www.cdm.depaul.edu/Pages/default.aspx">DePaul</a>, I've worked for <a href="https://www.chef.io/">Chef</a>, <a href="https://www.bellycard.com">Belly</a>, <a href="https://www.opendns.com">OpenDNS</a>, and others.</p>
 
     <p>I am super passionate about automation. My first experience was configuring networking equipment using serial consoles and Perl; thankfully, the tooling has gotten much better since then.</p>
 
