Update about page

--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@ permalink: /
 
   <div class="about-text">
     <h3>Hey, I'm Kevin Reedy!</h3>
-    <p>Greetings Internet! I'm an engineer from Chicago, working on my own product company. More details coming soon! Since graduating from <a href="http://www.cdm.depaul.edu/Pages/default.aspx">DePaul</a>, I've worked for <a href="https://konghq.com/">Kong</a>, <a href="https://www.chef.io/">Chef</a>, <a href="https://www.bellycard.com">Belly</a>, <a href="https://www.opendns.com">OpenDNS</a>, and others.</p>
+    <p>I'm an engineer and founder from Chicago, working on my own product company - <a href="https://recrec.io">RecRec</a>. Previously, I've worked for <a href="https://konghq.com/">Kong</a>, <a href="https://www.chef.io/">Chef</a>, <a href="https://www.bellycard.com">Belly</a>, and <a href="https://www.opendns.com">OpenDNS</a>. I'm a founding board member of <a href="https://devopsdayschi.org/">DevOpsDays Chicago</a> and <a href="https://www.illinoisshuffleboard.org/">The Illinois Shuffleboard Assocation</a>.</p>
 
-    <p>I am super passionate about automation. My first experience was configuring networking equipment using serial consoles and Perl; thankfully, the tooling has gotten much better since then.</p>
+    <p>With RecRec, I'm taking everything I've learned about building communities, and I'm using it to build products and relationships that can strengthen recreational sports groups.</p>
 
-    <p>In my free time, I enjoy playing shuffleboard, snowboarding, brewing beer and promising myself that I'll update my blog more often. You can also find me on <a href="https://github.com/kevinreedy">Github</a> and <a href="https://twitter.com/kevinreedy">Twitter</a>.</p>
+    <p>In my free time, I enjoy, Playing Shuffleboard (currently ranked #20 in the world), Cycling, Cooking, Brewing Beer, and promising myself that I'll update my Blog more often. You can also find me on <a href="https://github.com/kevinreedy">Github</a> and <a href="https://twitter.com/kevinreedy">Twitter</a>.</p>
   </div>
 </div>
