--- a/about.html
+++ b/about.html
@@ -15,6 +15,9 @@ permalink: /
 
     <p>With RecRec, I'm taking everything I've learned about building communities, and I'm using it to build products and relationships that can strengthen recreational sports groups.</p>
 
-    <p>In my free time, I enjoy, Playing Shuffleboard (currently ranked #20 in the world), Cycling, Cooking, Brewing Beer, and promising myself that I'll update my Blog more often. You can also find me on <a href="https://github.com/kevinreedy">Github</a> and <a href="https://twitter.com/kevinreedy">Twitter</a>.</p>
+    <p>
+      In my free time, I enjoy, Playing Shuffleboard (currently ranked #20 in the world), Cycling, Cooking, Brewing Beer, and promising myself that I'll update my Blog more often.
+      You can also find me on <a rel="me" target="_blank" href="https://github.com/kevinreedy">Github</a>, <a rel="me" target="_blank" href="https://hachyderm.io/@kevinreedy">Mastodon</a>, and <a rel="me" target="_blank" href="https://twitter.com/kevinreedy">Twitter</a>.
+    </p>
   </div>
 </div>
