--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ permalink: /
 
   <div class="about-text">
     <h3>Hey, I'm Kevin Reedy!</h3>
-    <p>I'm an engineer and founder from Chicago, working on my own product company - <a href="https://recrec.io">RecRec</a>. Previously, I've worked for <a href="https://konghq.com/">Kong</a>, <a href="https://www.chef.io/">Chef</a>, <a href="https://www.bellycard.com">Belly</a>, and <a href="https://www.opendns.com">OpenDNS</a>. I'm a founding board member of <a href="https://devopsdayschi.org/">DevOpsDays Chicago</a> and <a href="https://www.illinoisshuffleboard.org/">The Illinois Shuffleboard Assocation</a>.</p>
+    <p>I'm an engineer and founder from Chicago, working on my own product company - <a href="https://recrec.io">RecRec</a>. Previously, I've worked for <a href="https://konghq.com/">Kong</a>, <a href="https://www.chef.io/">Chef</a>, <a href="https://www.bellycard.com">Belly</a>, and <a href="https://www.opendns.com">OpenDNS</a>. I'm a founding board member of <a href="https://devopsdayschi.org/">DevOpsDays Chicago</a> and <a href="https://www.illinoisshuffleboard.org/">The Illinois Shuffleboard Association</a>.</p>
 
     <p>With RecRec, I'm taking everything I've learned about building communities, and I'm using it to build products and relationships that can strengthen recreational sports groups.</p>
 
