--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ permalink: /
 
     <p>
       In my free time, I enjoy, Playing Shuffleboard (currently ranked #20 in the world), Cycling, Cooking, Brewing Beer, and promising myself that I'll update my Blog more often.
-      You can also find me on <a rel="me" target="_blank" href="https://github.com/kevinreedy">Github</a>, <a rel="me" target="_blank" href="https://hachyderm.io/@kevinreedy">Mastodon</a>, and <a rel="me" target="_blank" href="https://twitter.com/kevinreedy">Twitter</a>.
+      You can also find me on <a rel="me" target="_blank" href="https://github.com/kevinreedy">GitHub</a>, <a rel="me" target="_blank" href="https://hachyderm.io/@kevinreedy">Mastodon</a>, and <a rel="me" target="_blank" href="https://twitter.com/kevinreedy">Twitter</a>.
     </p>
   </div>
 </div>
