--- a/error.html
+++ b/error.html
@@ -8,5 +8,5 @@ sitemap: false
 
 <div class="home">
 
-  Some sort of error has occured. Sorry about that.
+  Some sort of error has occurred. Sorry about that.
 </div>
